Improved handling and interaction with the less extension

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,8 +34,8 @@
     ]
   },
   "include": [
-    "src/**/*",
-    "./externals.d.ts"
+    "src/**/*"
+//    "./externals.d.ts"
   ],
   "exclude": [
     "node_modules",
